--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
 SERVER_HOST="localhost"
 SERVER_PORT="3000"
 
-DATABASE_URL="postgresql://postgres:dev@127.0.0.1:5432/nest-starter?schema=nest-starter"
+DATABASE_URL="postgresql://postgres:dev@127.0.0.1:5432/be-febe?schema=public"
+
+JWT_SECRET="secret"
+JWT_EXPIRATION="1d"
