--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ DATABASE_URL="postgresql://postgres:dev@127.0.0.1:5432/be-febe?schema=public"
 
 JWT_SECRET="secret"
 JWT_EXPIRATION="1d"
+
+FIREBASE_VALIDATE_URL=""
