feat: google artifact hub build

--- a/.github/workflows/image-to-containerRegistry.yaml
+++ b/.github/workflows/image-to-containerRegistry.yaml
@@ -23,7 +23,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: gcr.io/feladatsor-15604/s${{ github.event.repository.name }}
+          images: feladatsor-15604/${{ github.event.repository.name }}
           flavor: |
             latest=false
 
