--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-SERVER_HOST="localhost"
-SERVER_PORT="3000"
+HOST="localhost"
+PORT="3000"
 
 DATABASE_URL="postgresql://postgres:dev@127.0.0.1:5432/be-febe?schema=public"
 
