--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,6 @@ DATABASE_URL="postgresql://postgres:dev@127.0.0.1:5432/be-febe?schema=public"
 
 JWT_SECRET="secret"
 JWT_EXPIRATION="1d"
+DISABLE_JWT_VALIDATION="false"
 
 FIREBASE_VALIDATE_URL=""
