--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sharp": "^0.33.5",
     "ts-morph": "^17.0.1"
   },
   "devDependencies": {
@@ -59,6 +60,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/multer": "^1.4.12",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^4.0.1",
     "@types/supertest": "^2.0.11",
