--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,12 @@
 version: '3.8'
 services:
 
-
   app:
     image: gcr.io/feladatsor-15604/feladatsor-backend:v0.0.18
     container_name: be_feladatsor
     restart: unless-stopped
     ports:
-      - 3000:3000
+      - 8080:8080
 
   postgres:
     image: postgres:13
@@ -15,8 +14,10 @@ services:
     restart: always
     ports:
       - '5432:5432'
-    env_file:
-      - .env
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=dev
+      - POSTGRES_DB=be-febe
     volumes:
       - /nfs/feladatbekuldo-be:/var/lib/postgresql/data
 
