--- a/.github/workflows/image-to-containerRegistry.yaml
+++ b/.github/workflows/image-to-containerRegistry.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   push-image:
     runs-on: ubuntu-latest
-    name: Build and push ${{ github.repository }} to DockerHub repository
+    name: Build and push ${{ github.repository }} to DockerHub
     steps:
       - name: Login to DockerHub
         uses: docker/login-action@v2
