--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/serve-static": "^4.0.2",
     "@nestjs/terminus": "^9.2.1",
     "@prisma/client": "4.10.1",
     "apollo-server-express": "^3.11.1",
