--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -8,6 +8,10 @@ services:
       - '5432:5432'
     env_file:
       - .env
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=dev
+      - POSTGRES_DB=be-febe
     volumes:
       - postgres:/var/lib/postgresql/data
 
