--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.5.6",
     "env-var": "^7.3.0",
+    "exceljs": "^4.4.0",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.18",
     "passport": "^0.7.0",
