chore: update user by id, load-old-excel improvements

--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,7 @@ JWT_SECRET="secret"
 JWT_EXPIRATION="1d"
 DISABLE_JWT_VALIDATION="false"
 
-FIREBASE_VALIDATE_URL=""
+#Used to download images from the mokegyesulet sharepoint page, can be obtained by opening any sharepoint (Teams) link, authenticating as normal, and copy the headers from the network tab
+SHAREPOINT_COOKIE="rtFa=<TOKEN1>; FedAuth=<TOKEN2>"
+
+FIREBASE_VALIDATE_URL="https://europe-west1-feladatsor-15604.cloudfunctions.net/verifyIdToken"
