feat: change prismaClient usage to prismaService

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ JWT_EXPIRATION="1d"
 DISABLE_JWT_VALIDATION="false"
 
 #Used to download images from the mokegyesulet sharepoint page, can be obtained by opening any sharepoint (Teams) link, authenticating as normal, and copy the headers from the network tab
+#This is used only for the DB initial data load process. If this is not present, the Sharepoint images won't be downloaded.
 SHAREPOINT_COOKIE="rtFa=<TOKEN1>; FedAuth=<TOKEN2>"
 
 FIREBASE_VALIDATE_URL="https://europe-west1-feladatsor-15604.cloudfunctions.net/verifyIdToken"
