--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/terminus": "^9.2.1",
-    "@prisma/client": "4.10.1",
+    "@prisma/client": "^4.16.2",
     "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
