--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "exceljs": "^4.4.0",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.18",
+    "lodash": "^4.17.21",
     "nestjs-create-param-decorator-with-injections": "^0.1.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -64,6 +65,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/lodash": "^4.17.17",
     "@types/multer": "^1.4.12",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^4.0.1",
