feat: auto deploy to dev env

--- a/.github/workflows/image-to-containerRegistry.yaml
+++ b/.github/workflows/image-to-containerRegistry.yaml
@@ -71,4 +71,4 @@ jobs:
             --allow-unauthenticated \
             --add-volume name=file-storage,type=cloud-storage,bucket=${{ vars.GCS_BUCKET }} \
             --add-volume-mount volume=file-storage,mount-path=/code/data \
-            --set-env-vars DATABASE_URL=${{ secrets.DATABASE_URL_DEV }},JWT_SECRET=${{ secrets.JWT_SECRET_DEV }},PUBLIC_HOST=${{ vars.PUBLIC_HOST_DEV }},FIREBASE_VALIDATE_URL=${{ vars.FIREBASE_VALIDATE_URL }},FILE_STORAGE_FOLDER=/code/data
+            --set-env-vars DATABASE_URL=${{ secrets.DATABASE_URL_DEV }},JWT_SECRET=${{ secrets.JWT_SECRET_DEV }},PUBLIC_HOST=${{ vars.PUBLIC_HOST_DEV }},FIREBASE_VALIDATE_URL=${{ vars.FIREBASE_VALIDATE_URL }},PORT=8080,FILE_STORAGE_FOLDER=/code/data
