--- a/docker-compose.db.yml
+++ b/docker-compose.db.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   postgres:
-    image: postgres:13
+    image: postgres:16.11
     container_name: postgres
     restart: always
     ports:
@@ -17,4 +17,4 @@ services:
 
 volumes:
   postgres:
-    name: nest-db
+    name: feladatsor-db
